--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body > <!"Start of the paragraph"> 
     <style> h1 {text-align: center; } </style>
-    <h1> Selling Ragnarok and Albion Game Currencies </h1> <!"Title of the paragraph">     
+    <h1> Ragnarok and Albion Game Currencies </h1> <!"Title of the paragraph">     
 <section class="Descriptions">
     <style> p {text-align: center;}</style>
     <p class="Descriptions"> "Game Descriptions/Instructions/Content" 
