--- a/index.html
+++ b/index.html
@@ -22,19 +22,32 @@
     <p>How to order  </p>
     <hr>
     <section class="account">
-        <p>Register an account</p> 
+        <p class="reg">Register an account</p> 
             <p class="info" >Username: <input type="text" name="username" placeholder="Username" required> </p>
-            <p class="info">Password: <input type="text" name="password" placeholder="Password" required> </p>
+            <p class="info">Password: <input type="password" name="password" placeholder="Password" required> </p>
             <p class="info">Email Address: <input type="text" name="Email Address" placeholder="Email Address" required> </p>
             <p class="info"><label> <input checked id="male" value="male" type="radio" name="male-female">Male</label> </p>
             <p class="info"><label><input id="female" value="female" type="radio" name="male-female">Female</label> </p>
             <p class="info"> <button style="color:rgb(0, 47, 255)"> Submit </button> </p>
-            <hr>
+         <hr>
+            <p class="game">Which Game?</p>
+            <p><label><input checked id="Ragnarok" value="Ragnarok" type="radio" name="Ragnarok-Albion" >Ragnarok<label><input checked id="Albion" value="Albion" type="radio" name="Ragnarok-Albion" >Albion</label></label></p>
+            <p class="game">Which Server?</p>
+            <p><label><input checked id="Niflheim" value="Niflheim" type="radio" name="Niflheim-Helheim-East-West">Niflheim</label>
+               <label><input checked id="Helheim" value="Helheim" type="radio" name="Niflheim-Helheim-East-West">Helheim</label>
+               <label><input checked id="East" value="East" type="radio" name="Niflheim-Helheim-East-West">East</label>
+               <label><input checked id="West" value="West" type="radio" name="Niflheim-Helheim-East-West">West</label>
+            </p>
+            <p class="game">Quantity</p>
+            <p><input type="text" name="quantity" placeholder="Zeny or Silver Quantity" required></p>
+         <hr>
             <p class="info">Verify your account thru email address</p>
             <p class="info"> Identify or click your payment method:</p>
-            <a href="https://www.paypal.com/ph/home"> Paypal, </a> 
-            <a href="https://www.binance.com/en"> Binance, </a> 
-            <a href="https://www.kucoin.com/"> Kucoin  </a> 
+            <p class="sites">
+              <a class="link" target="_blank" href="https://www.paypal.com/ph/home"> Paypal,</a> 
+              <a class="link" target="_blank" href="https://www.binance.com/en"> Binance,</a> 
+              <a class="link" target="_blank" href="https://www.kucoin.com/"> Kucoin</a> 
+            </p>
                 <p><a class="payment" target="_blank" href="https://www.paypal.com/ph/home"><img src="Paypal photo.jfif" width="50" height="50"> </a>
                 <a class="payment" target="_blank" href="https://www.binance.com/en"><img src="binance.png" width="50" height="50"> </a>
                 <a id="payment" target="_blank" href="https://www.kucoin.com/"> <img src="Kucoin.jpg" width="50" height="50"> </a>
@@ -42,8 +55,10 @@
     </section>
   </p>
 </section>
-<p><a href="https://www.epicnpc.com/forums/guild-wars-2-gw2-items.240/"> www.epicnpc.com </a></p>
-<h2 class="Contacts"> Contacts Discord: rio4934 </h2>
+<hr>
+<p class="contacts">Contacts: <br>Discord: rio4934</p>
+<p><a class="epicnpc"target="_blank" href="https://www.epicnpc.com/members/rebelsmro.983182/">My EpicNpc Profile</a> </p>
+
 </body> <!"End of the paragraph">
     
 </html> <!"Always end with this"> 
