--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     
 <title> Ragnar </title> <!website title">
 </head>
-
     <body > <!"Start of the paragraph"> 
     <style> h1 {text-align: center; } </style>
-    <h1> Ragnarok and Albion Game Currencies </h1> <!"Title of the paragraph">     
-<section class="Descriptions">
+    <h1> Ragnarok and Albion Game Currencies </h1> <!"Title of the paragraph">  
+    <hr>   
     <style> p {text-align: center;}</style>
-    <p class="Descriptions"> "Game Descriptions/Instructions/Content" 
-    <p><a target="_blank" href="https://www.shining-moon.com/?module=news&action=view"> SMRO Website</a> </p> <!"Content of the website"></p> 
-</section>
+    <p class="intro"> With years of experience in the gaming industry,
+                    <br> we've built a reputation for reliability. 
+                    <br>Gamers trust us for safe and secure transactions, 
+                    <br>ensuring that your hard-earned victories are never compromised. 
+   </p>
 <section>
-  <p> 
-    <style> p{ text-align: center; font-style: bold;} </style>
-    <p>How to order  </p>
     <hr>
     <section class="account">
         <p class="reg">Register an account</p> 
@@ -29,15 +27,16 @@
             <p class="info"><label> <input checked id="male" value="male" type="radio" name="male-female">Male</label> </p>
             <p class="info"><label><input id="female" value="female" type="radio" name="male-female">Female</label> </p>
             <p class="info"> <button style="color:rgb(0, 47, 255)"> Submit </button> </p>
-            <p class="info">Verify your account thru email address</p>
+            <p class="verify">Verify your account thru email address</p>
             <hr>
+            <p class="how"> How to order:</p>
             <p class="game">Which Game?</p>
-            <p><label><input checked id="Ragnarok" value="Ragnarok" type="radio" name="Ragnarok-Albion" >Ragnarok<label><input checked id="Albion" value="Albion" type="radio" name="Ragnarok-Albion" >Albion</label></label></p>
+            <p><label class="select"><input class="game" checked id="Ragnarok" value="Ragnarok" type="radio" name="Ragnarok-Albion" >Ragnarok<label><input checked id="Albion" value="Albion" type="radio" name="Ragnarok-Albion" >Albion</label></label></p>
             <p class="game">Which Server?</p>
-            <p><label><input checked id="Niflheim" value="Niflheim" type="radio" name="Niflheim-Helheim-East-West">Niflheim</label>
-               <label><input checked id="Helheim" value="Helheim" type="radio" name="Niflheim-Helheim-East-West">Helheim</label>
-               <label><input checked id="East" value="East" type="radio" name="Niflheim-Helheim-East-West">East</label>
-               <label><input checked id="West" value="West" type="radio" name="Niflheim-Helheim-East-West">West</label>
+            <p><label class="select"><input checked id="Niflheim" value="Niflheim" type="radio" name="Niflheim-Helheim-East-West">Niflheim</label>
+               <label class="select"><input checked id="Helheim" value="Helheim" type="radio" name="Niflheim-Helheim-East-West">Helheim</label>
+               <label class="select"><input checked id="East" value="East" type="radio" name="Niflheim-Helheim-East-West">East</label>
+               <label class="select"><input checked id="West" value="West" type="radio" name="Niflheim-Helheim-East-West">West</label>
             </p>
             <p class="game">Quantity</p>
             <p><input type="text" name="quantity" placeholder="Zeny or Silver Quantity" required></p>
@@ -53,12 +52,12 @@
                 <a id="payment" target="_blank" href="https://www.kucoin.com/"> <img src="Kucoin.jpg" width="50" height="50"> </a>
                 </p>
     </section>
-  </p>
 </section>
 <hr>
-<p class="contacts">Contacts: <br>Discord: rio4934</p>
+<fieldset> <legend>Contacts</legend>
+<p class="contacts">Discord: rio4934</p>
 <p><a class="epicnpc"target="_blank" href="https://www.epicnpc.com/members/rebelsmro.983182/">My EpicNpc Profile</a> </p>
-
+</fieldset>
 </body> <!"End of the paragraph">
     
 </html> <!"Always end with this"> 
