--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <body > <!"Start of the paragraph"> 
     <style> h1 {text-align: center; } </style>
      <div>
-         <h1><span class="span">Ragnarok and Albion Game Currencies</span></h1> <!"Title of the paragraph">
+         <h1>Ragnarok and Albion Game Currencies</h1> <!"Title of the paragraph">
      </div>
     <hr>   
     <style> p {text-align: center;}</style>
-    <p class="intro"> <span class="span">With years of experience in the gaming industry,
+    <p class="intro"> With years of experience in the gaming industry,
                     <br> we've built a reputation for reliability. 
                     <br>Gamers trust us for safe and secure transactions, 
-                    <br>ensuring that your hard-earned victories are never compromised. </span>
+                    <br>ensuring that your hard-earned victories are never compromised. 
    </p>
-<section>
+<div>
     <hr>
-    <section class="account">
-        <p class="reg"><span class="span">Register an account</span></p> 
-            <p class="info"> <span class="span">Username:</span> <input type="text" name="username" placeholder="Username" required> </p>
-            <p class="info"> <span class="span">Password: </span><input type="password" name="password" placeholder="Password" required> </p>
-            <p class="info"><span class="span">Email Address:</span> <input type="text" name="Email Address" placeholder="Email Address" required> </p>
-            <p class="info"><label> <input checked id="male" value="male" type="radio" name="male-female">Male</label> </p>
+    <div class="account">
+        <p class="reg">Register an account</p> 
+            <p class="info"> Username: <input type="text" name="username" placeholder="Username" required> </p>
+            <p class="info"> Password: <input type="password" name="password" placeholder="Password" required> </p>
+            <p class="info"> Email Address: <input type="text" name="Email Address" placeholder="Email Address" required> </p>
+            <p class="info"><label><input checked id="male" value="male" type="radio" name="male-female">Male</label> </p>
             <p class="info"><label><input id="female" value="female" type="radio" name="male-female">Female</label> </p>
-            <p class="info"> <button style="color:rgb(0, 47, 255)"> Submit </button> </p>
-            <p class="verify"><span class="span">Verify your account thru email address</span></p>
+            <p> <button style="color:black"> Submit </button> </p>
+            <p class="verify">Verify your account thru email address</p>
             <hr>
-            <p class="how"><span class="span"> How to order:</span></p>
-            <p class="game"><span class="span">Which Game?</span></p>
+            <p class="how"> How to order:</p>
+            <p class="game">Which Game?</p>
             <p><label class="select"><input class="game" checked id="Ragnarok" value="Ragnarok" type="radio" name="Ragnarok-Albion" >Ragnarok<label><input checked id="Albion" value="Albion" type="radio" name="Ragnarok-Albion" >Albion</label></label></p>
-            <p class="game"><span class="span">Which Server?</span><p>
+            <p class="game">Which Server?<p>
             <p><label class="select"><input checked id="Niflheim" value="Niflheim" type="radio" name="Niflheim-Helheim-East-West">Niflheim</label>
                <label class="select"><input checked id="Helheim" value="Helheim" type="radio" name="Niflheim-Helheim-East-West">Helheim</label>
                <label class="select"><input checked id="East" value="East" type="radio" name="Niflheim-Helheim-East-West">East</label>
@@ -53,8 +53,8 @@
                 <a class="payment" target="_blank" href="https://www.binance.com/en"><img src="binance.png" width="50" height="50"> </a>
                 <a id="payment" target="_blank" href="https://www.kucoin.com/"> <img src="Kucoin.jpg" width="50" height="50"> </a>
                 </p>
-    </section>
-</section>
+    </div>
+</div>
 <hr>
 <fieldset> <legend>Contacts</legend>
 <p class="contacts">Discord: rio4934</p>
