4:14 almost done with the design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <p class="intro"> <span class="span">With years of experience in the gaming industry,
                       we've built a reputation for reliability. 
                       Gamers trust us for safe and secure transactions, 
-                      ensuring that your hard-earned victories are never compromised. </span>
+                      ensuring that your hard-earned victories are never compromised.
+                     We are doing this business for almost 5 years. </span>
     </p>
 </div>
 <div>
@@ -75,7 +76,7 @@
                 </p>
     </div>
 </div>
-<hr>
+<div><p class="warning">We always do safe deals.Non refundable if your account got banned. Always follow our instructions on dealing the zeny/silver/items. We just refund it if the mistake is on our side.</p></div>
 <fieldset> <legend>Contacts</legend>
 <p class="contacts">Discord: rio4934</p>
 <p><a class="epicnpc"target="_blank" href="https://www.epicnpc.com/members/rebelsmro.983182/">My EpicNpc Profile</a> </p>
