5:11 Done with term checkbox

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                       we've built a reputation for reliability. 
                       Gamers trust us for safe and secure transactions, 
                       ensuring that your hard-earned victories are never compromised.
-                     We are doing this business for almost 5 years. </span>
+                     We are doing this business for almost 5 years now. </span>
     </p>
 </div>
 <div>
@@ -36,6 +36,7 @@
             <label class="info"><label><input checked id="male" value="male" type="radio" name="male-female">Male</label> 
             <label class="info"><label><input id="female" value="female" type="radio" name="male-female">Female</label> 
         </div>
+        <div class="terms"><input type="checkbox" required/> <span class="span">I accept terms and conditions.</span></div>
         <div><p><input class="button" type="button" value="Submit"/></p></div>
         <p class="verify">Verify your account thru email address</p>
         <hr>
@@ -76,7 +77,7 @@
                 </p>
     </div>
 </div>
-<div><p class="warning">We always do safe deals.Non refundable if your account got banned. Always follow our instructions on dealing the zeny/silver/items. We just refund it if the mistake is on our side.</p></div>
+
 <fieldset> <legend>Contacts</legend>
 <p class="contacts">Discord: rio4934</p>
 <p><a class="epicnpc"target="_blank" href="https://www.epicnpc.com/members/rebelsmro.983182/">My EpicNpc Profile</a> </p>
